Change `/postcodes_by_settlement` fields
backend v0.6.0

API:
- Added field `type` to  `/postcodes_by_settlement` endpoint: it is now available to select the types of post offices that you want to receive
